test/Fail/Issue1145.err
Issue1145.agda:8.3: error: [ParseError]
Bad<ERROR>  : Set                      --...
